[package]
name = "get-LAN-IP-telegram-bot-rs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.4"
dotenvy = "0.15.7"
frankenstein = "0.30.2"
lazy_static = "1.4.0"
local-ip-address = "0.5.7"
time = { version = "0.3.43", features = ["formatting", "local-offset"] }
